[package]
name = "redbpf-memtrace"
version = "0.1.0"
authors = ["quininer <quininer@live.com>"]
edition = "2018"

[workspace]
members = [ "probes" ]

[build-dependencies]
cargo-bpf = { version = "1.1", default-features = false, features = ["build"] }

[dependencies]
probes = { path = "probes" }
redbpf = {  version = "1.1", features = ["load"] }

libc = "0.2"
argh = "0.1"
anyhow = "1"
tokio = { version = "0.2", features = ["rt-core", "rt-util", "io-driver", "macros", "signal", "time", "stream"] }

[patch.crates-io]
cargo-bpf = { path = "../redbpf/cargo-bpf" }
redbpf = { path = "../redbpf/redbpf" }
redbpf-macros = { path = "../redbpf/redbpf-macros" }
redbpf-probes = { path = "../redbpf/redbpf-probes" }
